# loop-buddy

./: .gitignore  BW-Complete-Form-Report.html  Builders-Workbench-Complete-Form-Report.html  Builders工作台-项目管理向导 v2.dc.html  Builders工作台-项目管理向导 v3.dc.html  Builders工作台-项目管理向导.dc.html  Builders工作台-项目管理向导.dc.v1.html  Builders工作台-项目管理向导.dc.v2.html  CLAUDE.md  CONTEXT.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  WorkflowHub-25-Iterations-Report.html  builders-workbench-genesis-v1.html  builders-workbench-mvp-v1.html  builders-workbench-opc-v1.html  builders-workbench-opc-v2.html  builders-workbench-opc-v3.html  claude-workflow-standard.md  comparison.html  framework.md  landing-v1.html  sinan-control-plane-v1.html  sinan-loop-workbench-assets-v1.html  sinan-loop-workbench-metrics-v1.html  sinan-loop-workbench-queue-v1.html  sinan-loop-workbench-v1.html  sinan-workbench-cn-v2.html  sinan-workbench-minimal-v1.html  summary.html  workbench.html  体系重构方案-角色与周期.dc.html  创建流程 v4 · 卡片流.dc.html  洞察链路重构方案.dc.html  看板与创建-主轴方案探索.dc.html  运营页减法方案 v2 · 四阶段轴.dc.html
.github/workflows/: ci.yml
archive/: workbench-pre-5stage-migration.db
builders-workbench-design/: 00-ground-truth.md  01-redteam-r1-and-mvp-v1.md  02-keystone-falsification.md  03-converged-verdict.md  04-builders-workbench-hardened.md  05-builders-workbench-converged.md
crates/app-desktop/: Cargo.toml
crates/app-desktop/assets/fonts/: README.md
crates/app-desktop/src/: bridge.rs  icons.rs  kernel.rs  main.rs  shell.rs  templates.rs  theme.rs
crates/app-desktop/src/screens/: activity_hub.rs  agent_hub.rs  chrome.rs  component_detail.rs  connector_hub.rs  create.rs  cron_hub.rs  knowledge_hub.rs  markdown.rs  mod.rs  notify_hub.rs  op.rs  ops.rs  project_rail.rs  projects.rs  settings_hub.rs  skill_hub.rs  wall.rs  wizard.rs  workflow_flow.rs  workflow_hub.rs
crates/app-desktop/src/screens/wizard/: steps.rs
crates/app-web/: README.md
crates/bw-app/: Cargo.toml
crates/bw-app/examples/: adversarial_loop.rs  agent_cli_routing.rs  archive_aihot_evidence.rs  collector_demo.rs  cron_modes.rs  dogfood_workflowhub.rs  edit_detach.rs  import_ecc_agents.rs  import_skill_library.rs  import_skill_package.rs  incubate_issue.rs  migrate_legacy_db.rs  parse_workflow.rs  practice_aihot.rs  practice_first_loop.rs  real_demo.rs  real_team_loop.rs  record_fusion_round.rs  record_real_build.rs  seed_board_demo.rs  seed_demo.rs  self_optimize_demo.rs  simulate_hub.rs  verify_c12_exit_flow.rs  verify_c13_draft_mock_lock.rs  verify_c14_action_progress.rs  verify_c15_failure_translation.rs  verify_c16_repo_metadata.rs  verify_c8_standard_trio.rs  verify_goal.rs
crates/bw-app/src/: agent_import.rs  legacy_migration.rs  lib.rs  skill_import.rs
crates/bw-app/tests/: autopilot.rs  complete_form.rs  hub_spine.rs  issues_skill_loop.rs  monitor.rs  p2_ops_slice.rs  run_outcome.rs  scheduler.rs  spine.rs  stage_metrics.rs  user_day.rs  version_log.rs
crates/bw-core/: Cargo.toml
crates/bw-core/src/: analysis.rs  ids.rs  lib.rs  model.rs  playbook.rs  standards.rs
crates/bw-core/src/derive/: eval.rs  measure.rs  mod.rs  sealed.rs  target.rs
crates/bw-core/tests/: derive_tests.rs
crates/bw-engine/: Cargo.toml
crates/bw-engine/src/: claude_cli.rs  contract.rs  evidence.rs  git_log.rs  github.rs  lib.rs  metrics_file.rs  mock.rs  unsupported_cli.rs  workspace.rs
crates/bw-engine/tests/: engine.rs
crates/bw-store/: Cargo.toml
crates/bw-store/src/: lib.rs  schema.sql  seed.rs  sqlite.rs
crates/bw-store/tests/: issues.rs  skills.rs  store.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  vm.rs
design/: Builders工作台-项目管理向导 v4.dc.html  README.md  体系重构方案 v2 · 五阶段五方法论.dc.html  创建流程 v3 · Claude式向导.dc.html  运营页减法方案.dc.html
design/creation-flow/: 创建流程 v3 · Claude式向导.dc.html  创建流程 v4 · 卡片流.dc.html
design/explorations/: 洞察链路重构方案.dc.html  看板与创建-主轴方案探索.dc.html
design/ops-page-reduction/: 运营页减法方案 v2 · 四阶段轴.dc.html  运营页减法方案.dc.html
design/project-management-wizard/: Builders工作台-项目管理向导 v2.dc.html  Builders工作台-项目管理向导 v3.dc.html  Builders工作台-项目管理向导 v4.dc.html  Builders工作台-项目管理向导.dc.html  v4-upgrade-plan.md
design/role-maps/: everything-claude-code-roles.html  omc-roles.html
design/system-refactor-plan/: 体系重构方案 v2 · 五阶段五方法论.dc.html  体系重构方案-角色与周期.dc.html
docs/: metrics-toml-format.md
docs/adr/: 0001-ubiquitous-language.md
docs/examples/: metrics.toml.sample
docs/skills/competitive-analysis/: PROBE.md  SKILL.md
docs/skills/metrics-binding/: SKILL.md
docs/skills/north-star-discovery/: SKILL.md
docs/superpowers/plans/: 2026-07-22-github-centric-onboarding.md
docs/superpowers/specs/: 2026-07-22-github-centric-onboarding-design.md
examples/: README.md
examples/aihot/: bw-aihot.db
iterations/: 00-BACKLOG.md  AIHOT-EVIDENCE.json  ALIGNMENT-ROUND-REPORT.md  COMPLETE-FORM-NOTES.md  HANDOFF-2026-07-15.md  HANDOFF-2026-07-16-A5.md  HANDOFF-TO-GLM52.md  JOURNAL.md  JOURNEY.json  PM-TEMPLATE.md  PRACTICE-AIHOT.md  PRACTICE-FIRST-LOOP.md  SELFCHECK-plan11.md  TAKEOVER-REPORT-GLM52.md  V2-DESIGN.md  V2-JOURNAL.md
plan/: 00-PLAN.md  01-prototype-inventory.md  02-rust-stack-evaluation.md  03-architecture-and-engine.md  04-effort-and-mvp.md  05-complete-form-design.md  06-overall-alignment.md  07-product-proposition.md  08-mvp-execution-plan.md  09-aihot-practice-run.md  10-personal-kanban-and-real-run.md  11-boards-process-cards-and-real-aihot-loop.md  12-skill-agent-workflow-cron-truthful-modeling.md  13-github-mainline-creation-flow.md  14-creation-experience.md
scripts/: guard-kernel-ui-free.sh  make_demo_video.py  probe-competitive-analysis-search.sh  supervise-real-demo.sh
sinan-workbench-design/: 00-brief.md  DESIGN.md  R3-VERDICT.md  README.md  blueteam-r1.md  blueteam-r2.md  cost-redteam.md  decision-log.md  pm-spec.md  premortem-human-factors.md  redesign-contract.md  rule-governance-spec.md  security-redteam.md  ux-spec.md
skills/create-loop/: SKILL.md
skills/create-loop/examples/: fix-issue.loop.yaml
verification/: Builders-Workbench-Complete-Form-Report.html  README.md
(+1 files in other folders)
