[package]
name = "app-desktop"
description = "Desktop shell (Dioxus 0.7 / wry WebView). P2: the real shell — project wall, creation wizard flow, operating/monitoring view on the proven spine."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "builders-workbench"
path = "src/main.rs"

[dependencies]
# Hard-pinned via the workspace (=0.7.9). `desktop` feature = wry WebView shell.
dioxus = { workspace = true, features = ["desktop"] }
bw-core = { workspace = true, features = ["idgen"] }
bw-engine = { workspace = true }
bw-store = { workspace = true }
bw-app = { workspace = true }
ui = { workspace = true }
tokio = { workspace = true }
time = { workspace = true, features = ["std"] }
uuid = { workspace = true }
# T15 (plan/12 §10 v1.1#2): MD 富文本渲染——纯 Rust CommonMark 解析器,只进
# 这个 crate(内核五个 crate 零新增依赖,见 CLAUDE.md 门禁)。
pulldown-cmark = { version = "0.13.4", default-features = false }
# T15:frontmatter 属性卡复用 T2(skill_import.rs)已经选定的真实 YAML
# 解析器——workspace 里本就有(bw-app 已用),不是新引入的第三方依赖。
serde_yaml = { workspace = true }
