[package]
name = "bw-app"
description = "Orchestration brain (UI-agnostic): AppState + Command/Event bus + use-case handlers. The shared 80% behind desktop and web."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bw-core = { workspace = true, features = ["idgen"] }
bw-engine = { workspace = true }
bw-store = { workspace = true }
tokio = { workspace = true }
time = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
bw-store = { workspace = true }
bw-engine = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
time = { workspace = true, features = ["std"] }
async-trait = { workspace = true }
serde = { workspace = true }
# C15(plan/14): example-only — the headless verifier for `ui::explain_failure`
# reuses the real pure function rather than re-implementing its match rules.
# dev-dependency only (examples/tests), so `bw-app`'s normal build/guard
# stays untouched — see `scripts/guard-kernel-ui-free.sh` (checks `--edges
# normal`, i.e. `[dependencies]`, not this).
ui = { workspace = true }
