[package]
name = "bw-engine"
description = "Workflow execution engine: WorkflowSpec → phase loop, the frozen Executor contract + a deterministic MockExecutor + a reusable consistency suite."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bw-core = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# C6 (plan/13 D5): `.bw/metrics.toml` parser.
toml = { workspace = true }
# MockExecutor's optional simulated latency (tokio::time); ClaudeCliExecutor
# shells out to the `claude` CLI (tokio::process). bw-engine is a native
# runtime crate (not in the wasm32 keepalive set), so this is consistent.
tokio = { workspace = true, features = ["process"] }

[dev-dependencies]
tokio = { workspace = true }
# Integration tests implement `Executor` (a #[async_trait] trait) directly —
# tests/*.rs are separate crates and don't inherit normal dependencies.
async-trait = { workspace = true }
