[package]
name = "ui"
description = "Shared ViewModel + pure-function selectors (state → renderable DTO), the Rust port of the prototype buildApp() (filled in P1/P2)."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Inherits the workspace default (no `idgen`/RNG) → `ui` stays wasm32-clean.
bw-core = { workspace = true }
serde = { workspace = true }
# Same no-default-features config as bw-core (no std clock reads) — wasm32-clean.
time = { workspace = true }
